--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
     pointer-events:none;
   }
 
+  
+
   /* legend */
   .legend{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-bottom:16px}
   .chip{display:flex;gap:8px;align-items:center;padding:8px 10px;border-radius:999px;background:linear-gradient(90deg,rgba(255,255,255,0.01),rgba(255,255,255,0.005));color:var(--muted);font-weight:700}
@@ -414,7 +416,7 @@ const heroes = {
     ultimate:"Genesis Halo — Joshua becomes a conduit of divine will. A massive halo forms in the sky, flooding the battlefield with sanctified light that blinds evil, restores life, and reshapes the ground into holy soil. For one minute, he is the Light itself — untouchable, unstoppable, and absolute."
 },
 
-  "Joy Shannelle": {race: "Reptilian-Hybrid", role: "Shadowstalker", title: "Silver Tongue",
+  "Joie Shanelle": {race: "Reptilian-Hybrid", role: "Shadowstalker", title: "Silver Tongue",
     melee: "Venomless Fang — lashes or coils with precise strikes, restraining enemies without poison.",
     abilities: [["Mind Whisper", "Subtly influences thoughts, causing hesitation or doubt in enemies."],["Serpentine Agility", "Slithers or contorts to dodge attacks or squeeze through gaps."],["Coiling Strike", "Strikes multiple enemies by wrapping or tripping them with her body."],["Hypnotic Fang", "Mesmerizes enemies in a large radius, causing confusion and freezing."]],
     passives: ["Cold-Blooded Calm — Gains precision and focus under pressure.","Chameleon Aura — Blends into shadows or surroundings when stationary."],
@@ -429,6 +431,15 @@ const heroes = {
     stats:{Defense:18,Strength:16,Agility:12,Intelligence:20,Perception:17,"Magic Control":10,"Technique Control":20},
     ultimate:"Grand Steam Overdrive — Kiptoo climbs into a mechanized exosuit, boosting strength, defense, and technique. Fires steam cannons, deploys shields, and floods the battlefield with auxiliary gadgets until energy burns out."
 },
+
+  "Leon": {race: "Human", role:"Reaver", title:"Spatial Combatant",
+    melee: "Warp Gauntlets — metallic gloves etched with teleportation runes that let him fold space mid-punch.",
+    abilities:[["Spatial Rend","Tears open rifts that slice through anything they touch — air, stone, armor, doesn’t matter."],["Blink Strike","Instantly teleports behind or around opponents mid-combat, chaining attacks with disorienting speed."],["Void Pulse","Expands a shockwave of spatial distortion that pushes everything away or crushes objects within a set radius."],["Event Horizon","Locks an enemy inside a small warped pocket of space — a temporary battlefield where only he can move freely."]],
+    passives:["Dimensional Instinct – Instantly senses distortions or movement within a 50-meter radius; basically impossible to sneak up on.","Warp Resilience – Immune to spatial attacks, compression, and displacement; space magic can’t touch him."],
+    stats:{Defense:14,Strength:13,Agility:18,Intelligence:17,Perception:19,"Magic Control":20,"Technique Control":18},
+    ultimate:"Zero Point Collapse – Leon folds all surrounding space into a single microscopic point, creating a silent implosion that vaporizes everything caught in it — then reverses it to restore the terrain (but not the enemies 💀)."
+},
+
 
   "Malika": {race:"Human (Witch Lineage)", role:"Aetherist", title:"Mirror Witch",
     melee:"Crystal Wand — shatters into razor-edged shards to attack, reflect magic, or conjure mirror doubles for deception and control.",
